--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,7 +24,7 @@ jobs:
           go-version: 1.16
 
       - name: Test
-        run: go test -v -race ./...
+        run: go test -v -race -vet off ./...
 
   golangci:
     runs-on: ubuntu-latest
